--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,27 @@
 /*+++++++++++++++++++++++++++*/
-     /* BASIC SETUP */
+
+
+/* BASIC SETUP */
+
+
 /*+++++++++++++++++++++++++++*/
 
-*  {
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html  {
-    background-color:#fff;
+html {
+    background-color: #fff;
     color: #555;
 
     font-family: 'Lato', 'Arial', 'sans-serif';
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
-
 }
+
 
 /* +++++ start/ BUTTONS ++++++*/
 
@@ -37,6 +41,7 @@ html  {
     border-color: #c16060;
     text-shadow: 1.7px 1.75px #c16060;
 }
+
 
 
 /*+++++ end/ BUTTONS +++++++*/
@@ -68,7 +73,8 @@ li {
     align-content: center;
     background-color: #d8d8c0;
 }
-#prep-container  {
+
+#prep-container {
     margin-right: auto;
     margin-left: auto;
 }
@@ -77,17 +83,24 @@ body {
 
     display: block;
     position: relative;
-    background: url(/assets/images/dining-room.jpeg) no-repeat center center fixed;
+
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    background-image: linear-gradient(rgba(0, 0, 0, .54), rgba(0, 0, 0, .45)), url(/assets/images/dining-room.jpeg);
+    
     background-size: cover;
+    background-position: center;
 }
-#order-up-container{
-	
-	 background-color: #d8d8c0 !important;
-	 margin: 50px 0px 0px 75px;
+
+#order-up-container,
+#prep-food-container,
+#stomach-container {
+
+    background-color: #d8d8c0 !important;
+    margin: 50px 0px 0px 75px;
 }
+
 #header {
     font-weight: bolder;
     font-size: 77px;
@@ -101,4 +114,3 @@ body {
     color: white;
     text-shadow: 1px 3px red;
 }
-
