--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,7 +27,7 @@
                       {{#each burgers}}
                          {{#if this.consumed}}
                          <li>
-                      {{this.burger_name}}
+                      {{this.name}}
         <form action="/{{this.id}}?_method=PUT" method="POST">
           <input type="hidden" name="consumed" value="false">
             </form>
