fixed error in creating a burger

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,63 +1,57 @@
 <div class="container">
-        <div class="row">
-                        <div class="col-md-5 col-xs-12" id="order-up-container">
-                <h2 id="order-ready-message">Order up!</h2>
-             
-                    <ul class="list-group undevouredBurgers">
-                         {{#each burgers}}
-                             {{#unless this.consumed}}
-                         <li>
-                            {{this.burger_name}}
-                                <form action="/{{this.id}}?_method=PUT" method="POST">
-                                <input type="hidden" name="consumed" value="true">
-                                <button type="submit" class="btn btn-default" id="devour-button">Devour Me</button>
-                            </form>
+    <div class="row">
+        <div class="col-md-5 col-xs-12" id="order-up-container">
+            <h2 id="order-ready-message">Order up!</h2>
 
-                                  {{> burgers/delete-burger}}
-                               </li>
-                            {{/unless}}
-                           {{/each}}
-                         </ul>      
-                         </div>         
-           
-            <div class="container">
-                <div class="col-md-5 col-xs-12" id="stomach-container">
-                    <h2>Your Digital Stomach</h2>
-                    <ul>
-                      {{#each burgers}}
-                         {{#if this.consumed}}
-                         <li>
-                      {{this.name}}
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="consumed" value="false">
-            </form>
-      </li>
+            <ul class="list-group undevouredBurgers">
+                {{#each burgers}} {{#unless this.consumed}}
+                <li>
+                    {{this.burger_name}}
+                    <form action="/{{this.id}}?_method=PUT" method="POST">
+                        <input type="hidden" name="consumed" value="true">
+                        <button type="submit" class="btn btn-default" id="devour-button">Devour Me</button>
+                    </form>
+
+                    {{> burgers/delete-burger}}
+                </li>
+                {{/unless}} {{/each}}
+            </ul>
+        </div>
+
+        <div class="container">
+            <div class="col-md-5 col-xs-12" id="stomach-container">
+                <h2>Your Digital Stomach</h2>
+                <ul>
+                    {{#each burgers}} {{#if this.consumed}}
+                    <li>
+                        {{this.burger_name}}
+                        <form action="/{{this.id}}?_method=PUT" method="POST">
+                            <input type="hidden" name="consumed" value="false">
+                        </form>
+                    </li>
 
 
-        {{> burgers/delete-burger}}
-         <form action="/{{this.id}}?_method=DELETE" method="POST">
-          <input type="hidden">
-          <button type="submit" class="btn btn-default" id="recycle-button">Recycle</button>
-        </form>
-    {{/if}}
-  {{/each}}
-</ul>
-                </div>
+                    {{> burgers/delete-burger}}
+                    <form action="/{{this.id}}?_method=DELETE" method="POST">
+                        <input type="hidden">
+                        <button type="submit" class="btn btn-default" id="recycle-button">Recycle</button>
+                    </form>
+                    {{/if}} {{/each}}
+                </ul>
             </div>
         </div>
-        <div class="container">
+    </div>
+    <div class="container">
         <div class="row">
             <div class="col-lg-4 container">
                 <p></p>
             </div>
             <div class="col-lg-4 container" id="prep-food-container">
                 <h2 id="counter-header text-center">Order Burgers Here!</h2>
-                <form>
-                    <div class="form-group">
-                        <label for="burger_order">Burger Name</label>
-                        <input type="burger" class="form-control" id="counter" placeholder="Your Burger Here">
-                        <div class="btn btn-lg btn-primary" id="order-burger-button">Or My Burger</div>
-                    </div>
+                <form method="POST" action="/" class="button-size text-center">
+                    <textarea type="text" name="burger_name"></textarea>
+                    <br>
+                    <button class="btn btn-large btn-primary" type="submit">Order it!</button>
                 </form>
             </div>
             <div class="col-lg-4 container">
@@ -65,6 +59,5 @@
             </div>
         </div>
     </div>
-    </div>
-    </div>
-    </div>
+</div>
+</div>
